[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=64",
    "setuptools_scm[toml]>=6.2",
    "wheel",
]

[project]
name = "rapthor"
authors = [
    {name = "David Rafferty", email = "drafferty@hs.uni-hamburg.de"},
    {name = "Marcel Loose", email = "loose@astron.nl"},
    {name = "Andre Offringa", email = "offringa@astron.nl"},
    {name = "Arend G. Dijkstra", email = "adijkstra@astron.nl"},
    {name = "Tammo Jan Dijkema", email = "dijkema@astron.nl"},
    {name = "Mark de Wever", email = "mark.dewever@stcorp.nl"},
    {name = "Frits Sweijen", email = "sweijen@astron.nl"},
    {name = "Sarod Yatawatta", email = "yatawatta@astron.nl"},
]
description = "Rapthor: LOFAR DDE Pipeline"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
classifiers=[
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "astropy",
    "bdsf",
    "bokeh>=3.1.0",
    "jinja2",
    "losoto>=2.4.3",
    "lsmtool @ git+https://git.astron.nl/RD/LSMTool.git@612927b6e7ad49101ca706e50f5945797b046cd8",
    "matplotlib",
    "mocpy",
    "numpy",
    "prefect[dask,shell]>=3.4.11,<4.0.0",
    "python-casacore",
    "python-dateutil",
    "pyyaml",
    "reproject",
    "requests",
    "Rtree",
    "scipy",
    "shapely",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "tox",
]
dev =  ["ruff", "rapthor[test]" ]

[dependency-groups]
test =  [
    "tox",
    "mock",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "pytest-mock",
    "pytest-socket",
]
dev =  [
    "ruff",
    "tox",
    "mock",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "pytest-mock",
    "pytest-socket",
]


[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks test as integration tests",
    "internet: marks tests that require internet access",
    "prefect: marks tests that start a Prefect test server and must run serially"
]


[tool.setuptools]
# package-data is specified below in section [tool.setuptools.package-data]
include-package-data = false
packages = [
    "rapthor",
    "rapthor.execution",
    "rapthor.execution.flows",
    "rapthor.lib",
    "rapthor.operations",
]
script-files = [
    "bin/concat_linc_files",
    "bin/plotrapthor",
    "bin/rapthor",
    "scripts/dev/run-rapthor-slurm-dev.sbatch",
    "scripts/prod/run-rapthor-slurm.sbatch",
    "rapthor/scripts/add_sector_models.py",
    "rapthor/scripts/adjust_h5parm_sources.py",
    "rapthor/scripts/blank_image.py",
    "rapthor/scripts/calculate_image_diagnostics.py",
    "rapthor/scripts/check_image_beam.py",
    "rapthor/scripts/collect_screen_h5parms.py",
    "rapthor/scripts/combine_h5parms.py",
    "rapthor/scripts/concat_ms.py",
    "rapthor/scripts/filter_skymodel.py",
    "rapthor/scripts/make_catalog_from_image_cube.py",
    "rapthor/scripts/make_image_cube.py",
    "rapthor/scripts/make_mosaic.py",
    "rapthor/scripts/make_mosaic_template.py",
    "rapthor/scripts/make_region_file.py",
    "rapthor/scripts/mpi_runner.sh",
    "rapthor/scripts/normalize_flux_scale.py",
    "rapthor/scripts/process_gains.py",
    "rapthor/scripts/regrid_image.py",
    "rapthor/scripts/restore_skymodel.py",
    "rapthor/scripts/subtract_sector_models.py",
]

[tool.setuptools.package-data]
rapthor = [
    "scripts/*",
    "settings/*",
    "skymodels/*"
]


[tool.setuptools_scm]
write_to = "rapthor/_version.py"


[tool.ruff]
line-length = 100

[tool.ruff.lint]
# Expand basic rules with name and style checks roughly equivalent to flake8 + black + pylint
# Some additional functional errors such as `await` on none async or wrong return types / args.
# More info https://docs.astral.sh/ruff/rules/
# TODO: Slowly add more rules and fix issues. E.g., start with "E" and "F"; then add "B",
# and so on. The `select` below is from our ASTRON Python project template.
# select = ["N", "A", "E", "F", "B", "W", "Q", "PL", "ASYNC", "S", "G", "RET", "ARG", "I"]
# The default behavior of ruff is to use "E" and "F", omitting stylistic rules.
exclude = ["debug/**"]
select = ["E", "F"]  # pycodestyle and pyflakes
ignore = ["E501"]  # line-too-long

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused-import
"tests/**" = [
    "F401",  # unused-import
    "F403",  # undefined-local-with-import-star
    "F405",  # undefined-local-with-import-star-usage
    "F841",  # unused-variable
]


[tool.tox]
requires = ["tox>4"]
envlist = ["lint", "format", "py3{9,10,11,12,13}", "test_integration"]

[tool.tox.env_run_base]
description = "Run all tests"
deps = [
    "tox",
    "mock",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "pytest-mock",
    "pytest-socket",
]
commands = [
    # test_field.py does not support parallel runs, so run sequentially.
    [
        "python", "-m", "pytest",
        "-m", "not integration",
        "-k", "test_field.py",
        "--cov=rapthor",
        "tests/{posargs}",
    ],
    # Tests that start a Prefect test server are sensitive to high process fan-out,
    # so run them serially before the rest of the suite.
    [
        "python", "-m", "pytest",
        "-m", "not integration and prefect",
        "-k", "not test_field.py",
        "--cov=rapthor",
        "--cov-append",
        "tests/{posargs}",
    ],
    # Run all other tests with the worker count selected by pytest-xdist.
    # Add to the existing coverage report from the run above.
    [
        "python", "-m", "pytest",
        "-m", "not integration and not prefect",
        "-n", "auto",
        "--dist", "worksteal",
        "-k", "not test_field.py",
        "--cov-report", "term-missing",
        "--cov-report", "xml",
        "--cov-report", "html",
        "--cov=rapthor",
        "--cov-append",
        "tests/{posargs}",
    ],
]

[tool.tox.env.test_integration]
description = "Run integration tests"
deps = [
    "tox",
    "mock",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "pytest-mock",
    "pytest-socket",
]
pass_env = [
    "CI_PROJECT_DIR",
    "NUMEXPR_MAX_THREADS",
    "PREFECT_HOME",
    "RAPTHOR_TEST_RUN_ROOT",
]
commands = [
    [
        "python", "-m", "pytest",
        "-m", "integration and not internet",
        "-n", "auto",
        "--dist", "worksteal",
        "-vv", "-ra",
        "tests/{posargs}",
    ],
    [
        "python", "-m", "pytest",
        "-m", "integration and internet",
        "-vv", "-ra",
        "tests/{posargs}",
    ]
]

[tool.tox.env.lint]
skip_install = true
deps = "ruff"
# Keep the command targets explicit instead of using tox TOML ref inline tables
# because Prefect reads pyproject.toml at import time on Python 3.10 with a
# TOML parser that cannot handle those nested inline tables.
commands = [
    [
        # check all files for selected rules (configured in [tool.ruff.lint])
        "python", "-m", "ruff", "check",
    ],
    # check formatting on specific files: format_targets in [tool.tox.env.format]
    [
        # Check imports sorted
        "python", "-m", "ruff", "check", "--select", "I",
        "rapthor/execution",
        "rapthor/lib/records.py",
        "rapthor/lib/parset.py",
        "rapthor/lib/strategy.py",
        "rapthor/operations/calibrate.py",
        "rapthor/operations/image.py",
        "rapthor/process.py",
        "rapthor/scripts/calculate_image_diagnostics.py",
        "rapthor/scripts/normalize_flux_scale.py",
        "tests/__init__.py",
        "tests/conftest.py",
        "tests/execution",
        "tests/integration",
        "tests/lib/test_field.py",
        "tests/lib/test_parset.py",
        "tests/lib/test_strategy.py",
        "tests/operations/test_calibrate.py",
        "tests/scripts/test_calculate_image_diagnostics.py",
        "tests/scripts/test_normalize_flux_scale.py",
    ],
    [
        # Check general formatting
        "python", "-m", "ruff", "format", "--check", "-v",
        "rapthor/execution",
        "rapthor/lib/records.py",
        "rapthor/lib/parset.py",
        "rapthor/lib/strategy.py",
        "rapthor/operations/calibrate.py",
        "rapthor/operations/image.py",
        "rapthor/process.py",
        "rapthor/scripts/calculate_image_diagnostics.py",
        "rapthor/scripts/normalize_flux_scale.py",
        "tests/__init__.py",
        "tests/conftest.py",
        "tests/execution",
        "tests/integration",
        "tests/lib/test_field.py",
        "tests/lib/test_parset.py",
        "tests/lib/test_strategy.py",
        "tests/operations/test_calibrate.py",
        "tests/scripts/test_calculate_image_diagnostics.py",
        "tests/scripts/test_normalize_flux_scale.py",
    ]
]

[tool.tox.env.format]
skip_install = true
deps = "ruff"
format_targets = [
    "rapthor/execution",
    "rapthor/lib/records.py",
    "rapthor/lib/parset.py",
    "rapthor/lib/strategy.py",
    "rapthor/operations/calibrate.py",
    "rapthor/operations/image.py",
    "rapthor/process.py",
    "rapthor/scripts/calculate_image_diagnostics.py",
    "rapthor/scripts/normalize_flux_scale.py",
    "tests/__init__.py",
    "tests/conftest.py",
    "tests/execution",
    "tests/integration",
    "tests/lib/test_field.py",
    "tests/lib/test_parset.py",
    "tests/lib/test_strategy.py",
    "tests/operations/test_calibrate.py",
    "tests/scripts/test_calculate_image_diagnostics.py",
    "tests/scripts/test_normalize_flux_scale.py"
]
commands = [
    [
        # sort imports
        "python", "-m", "ruff", "check", "--select", "I", "--fix",
        "rapthor/execution",
        "rapthor/lib/records.py",
        "rapthor/lib/parset.py",
        "rapthor/lib/strategy.py",
        "rapthor/operations/calibrate.py",
        "rapthor/operations/image.py",
        "rapthor/process.py",
        "rapthor/scripts/calculate_image_diagnostics.py",
        "rapthor/scripts/normalize_flux_scale.py",
        "tests/__init__.py",
        "tests/conftest.py",
        "tests/execution",
        "tests/integration",
        "tests/lib/test_field.py",
        "tests/lib/test_parset.py",
        "tests/lib/test_strategy.py",
        "tests/operations/test_calibrate.py",
        "tests/scripts/test_calculate_image_diagnostics.py",
        "tests/scripts/test_normalize_flux_scale.py",
    ],
    [
        # format code
        "python", "-m", "ruff", "format",
        "rapthor/execution",
        "rapthor/lib/records.py",
        "rapthor/lib/parset.py",
        "rapthor/lib/strategy.py",
        "rapthor/operations/calibrate.py",
        "rapthor/operations/image.py",
        "rapthor/process.py",
        "rapthor/scripts/calculate_image_diagnostics.py",
        "rapthor/scripts/normalize_flux_scale.py",
        "tests/__init__.py",
        "tests/conftest.py",
        "tests/execution",
        "tests/integration",
        "tests/lib/test_field.py",
        "tests/lib/test_parset.py",
        "tests/lib/test_strategy.py",
        "tests/operations/test_calibrate.py",
        "tests/scripts/test_calculate_image_diagnostics.py",
        "tests/scripts/test_normalize_flux_scale.py",
    ],

]
