[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=64",
    "setuptools_scm[toml]>=6.2",
    "wheel",
]

[project]
name = "rapthor"
authors = [
    {name = "David Rafferty", email = "drafferty@hs.uni-hamburg.de"},
    {name = "Marcel Loose", email = "loose@astron.nl"},
    {name = "Andre Offringa", email = "offringa@astron.nl"},
    {name = "Arend G. Dijkstra", email = "adijkstra@astron.nl"},
    {name = "Tammo Jan Dijkema", email = "dijkema@astron.nl"},
    {name = "Mark de Wever", email = "mark.dewever@stcorp.nl"},
    {name = "Frits Sweijen", email = "sweijen@astron.nl"},
    {name = "Sarod Yatawatta", email = "yatawatta@astron.nl"},
]
description = "Rapthor: LOFAR DDE Pipeline"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
classifiers=[
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "astropy",
    "bdsf",
    "jinja2",
    "losoto>=2.4.3",
    "lsmtool @ git+https://git.astron.nl/RD/LSMTool.git@master",
    "matplotlib",
    "mocpy",
    "numpy",
    "python-casacore",
    "python-dateutil",
    "pyyaml",
    "reproject",
    "requests",
    "Rtree",
    "scipy",
    "shapely",
    "cwltool==3.1.20260108082145", # Latest version breaks CWL validation checks in tests.
    "toil[cwl]>=9.0",
    "streamflow>=0.2.0.dev13"
]
dynamic = ["version"]

[project.optional-dependencies]
test = ["tox"]
dev =  ["ruff", "rapthor[test]" ]

[dependency-groups]
test =  [
    "tox",
    "mock",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "pytest-mock",
    "pytest-socket",
    "pandas"
]
dev = ["ruff", {include-group = "test"} ]


[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks test as integration tests",
    "internet: marks tests that require internet access"
]


[tool.setuptools]
# package-data is specified below in section [tool.setuptools.package-data]
include-package-data = false
packages = [
    "rapthor",
    "rapthor.lib",
    "rapthor.lib.toil_batch_systems",
    "rapthor.operations",
]
script-files = [
    "bin/concat_linc_files",
    "bin/plotrapthor",
    "bin/rapthor",
    "rapthor/scripts/add_sector_models.py",
    "rapthor/scripts/adjust_h5parm_sources.py",
    "rapthor/scripts/blank_image.py",
    "rapthor/scripts/calculate_image_diagnostics.py",
    "rapthor/scripts/check_image_beam.py",
    "rapthor/scripts/collect_screen_h5parms.py",
    "rapthor/scripts/combine_h5parms.py",
    "rapthor/scripts/concat_ms.py",
    "rapthor/scripts/correct_astrometry.py",
    "rapthor/scripts/filter_skymodel.py",
    "rapthor/scripts/make_catalog_from_image_cube.py",
    "rapthor/scripts/make_image_cube.py",
    "rapthor/scripts/make_mosaic.py",
    "rapthor/scripts/make_mosaic_template.py",
    "rapthor/scripts/make_region_file.py",
    "rapthor/scripts/mpi_runner.sh",
    "rapthor/scripts/normalize_flux_scale.py",
    "rapthor/scripts/process_gains.py",
    "rapthor/scripts/regrid_image.py",
    "rapthor/scripts/restore_skymodel.py",
    "rapthor/scripts/subtract_sector_models.py",
    "rapthor/scripts/wsclean_predict.py",
]

[tool.setuptools.package-data]
rapthor = [
    "pipeline/**",
    "scripts/*",
    "settings/*",
    "skymodels/*"
]


[tool.setuptools_scm]
write_to = "rapthor/_version.py"


[tool.ruff]
line-length = 100

[tool.ruff.lint]
# Expand basic rules with name and style checks roughly equivalent to flake8 + black + pylint
# Some additional functional errors such as `await` on none async or wrong return types / args.
# More info https://docs.astral.sh/ruff/rules/
# TODO: Slowly add more rules and fix issues. E.g., start with "E" and "F"; then add "B",
# and so on. The `select` below is from our ASTRON Python project template.
# select = ["N", "A", "E", "F", "B", "W", "Q", "PL", "ASYNC", "S", "G", "RET", "ARG", "I"]
# The default behavior of ruff is to use "E" and "F", omitting stylistic rules.
exclude = ["debug/**"]
select = ["E", "F"]  # pycodestyle and pyflakes
ignore = ["E501"]  # line-too-long

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused-import
"tests/**" = [
    "F401",  # unused-import
    "F403",  # undefined-local-with-import-star
    "F405",  # undefined-local-with-import-star-usage
    "F841",  # unused-variable
]


[tool.tox]
requires = ["tox>4"]
envlist = ["lint", "format", "py3{9,10,11,12,13}", "test_integration"]

[tool.tox.env_run_base]
description = "Run all tests"
deps = [{ replace = "ref", of = ["dependency-groups", "test"], extend = true }]
commands = [
    # test_field.py does not support parallel runs, so run sequentially.
    [
        "python", "-m", "pytest",
        "-m", "not integration",
        "-k", "test_field.py",
        "--cov=rapthor",
        "tests/{posargs}",
    ],
    # Run all other tests with 4 parallel processes.
    # Add to the existing coverage report from the run above.
    [
        "python", "-m", "pytest",
        "-m", "not integration",
        "-n", "auto",
        "-k", "not test_field.py",
        "--cov-report", "term-missing",
        "--cov-report", "xml",
        # "--cov-report", "html",
        "--cov=rapthor",
        "--cov-append",
        "tests/{posargs}",
    ],
]

[tool.tox.env.test_integration]
description = "Run integration tests"
deps = [
    { replace = "ref", of = ["dependency-groups", "test"], extend = true },
    "pytest-split<0.11",
]
pass_env = [
    "CI_PROJECT_DIR",
    "CI_NODE_INDEX",
    "CI_NODE_TOTAL",
    "BLIS_NUM_THREADS",
    "MKL_NUM_THREADS",
    "NUMEXPR_MAX_THREADS",
    "OMP_NUM_THREADS",
    "OPENBLAS_NUM_THREADS",
    "VECLIB_MAXIMUM_THREADS",
]
commands = [
    [
        "python", "-m", "pytest",
        "-m", "integration",
        "-vv", "-ra",
        "--durations-path", "{env:CI_PROJECT_DIR:}/tests/integration/.test_durations",
        "--splits", "{env:CI_NODE_TOTAL:1}",
        "--group", "{env:CI_NODE_INDEX:1}",
        "tests",
    ]
]

[tool.tox.env.lint]
skip_install = true
deps = "ruff"
commands = [
    [
        # check all files for selected rules (configured in [tool.ruff.lint])
        "python", "-m", "ruff", "check",
    ],
    # check formatting on specific files: format_targets in [tool.tox.env.format]
    [
        # Check imports sorted
        "python", "-m", "ruff", "check", "--select", "I",
        { replace = "ref", of = ["tool", "tox", "env", "format", "format_targets"], extend=true },
    ],
    [
        # Check general formatting
        "python", "-m", "ruff", "format", "--check", "-v",
        { replace = "ref", of = ["tool", "tox", "env", "format", "format_targets"], extend=true },
    ]
]

[tool.tox.env.format]
skip_install = true
deps = "ruff"
format_targets = [
    "rapthor/lib/__init__.py",
    "rapthor/lib/cluster.py",
    "rapthor/lib/cwl.py",
    "rapthor/lib/cwlrunner.py",
    "rapthor/lib/operation.py",
    "rapthor/lib/observation.py",
    "rapthor/lib/parset.py",
    "rapthor/lib/strategy.py",
    "rapthor/operations/calibrate.py",
    "rapthor/operations/image.py",
    "rapthor/process.py",
    "rapthor/scripts/calculate_image_diagnostics.py",
    "rapthor/scripts/normalize_flux_scale.py",
    "rapthor/testing.py",
    "rapthor/scripts",
    "tests"
]

commands = [
    [
        # sort imports
        "python", "-m", "ruff", "check", "--select", "I", "--fix",
        { replace = "ref", of = ["tool", "tox", "env", "format", "format_targets"], extend=true },
    ],
    [
        # format code
        "python", "-m", "ruff", "format",
        { replace = "ref", of = ["tool", "tox", "env", "format", "format_targets"], extend=true },
    ],

]
